<resources>
    <string name="app_name">School Supplies exchange service</string>
    <string name="action_settings">Settings</string>
    <string name="wrong_access">Wrong access, restart process</string>
    <string name="sign_up">Sign up</string>
    <string name="auto_login">Auto login</string>
    <string name="login">Login</string>
    <string name="id_hint">ID</string>
    <string name="pw_hint">Password</string>
    <string name="confirm">Confirm</string>
    <string name="name">Name</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="loading">Loading…</string>
    <string name="init">init…</string>
    <string name="access_login_server">Access login server</string>
    <string name="request_login">Request Login…</string>
    <string name="login_success">Login success!</string>
    <string name="sign_up_success">Sign up success!</string>
    <string name="offline_finish">Now offline\nApp force exit</string>
    <string name="get_school_data_start">Start get school data</string>
    <string name="get_school_data_fail">Fail get school data</string>
    <string name="get_school_data_done">Get school data done</string>
    <string name="auth_fail">Auth Fail…</string>
    <string name="school_name">School name</string>
    <string name="school_grade">Grade</string>
    <string name="school_class">Class</string>
    <string name="school_number">Number</string>
    <string name="set_school">Setting School</string>
    <string name="search_hint">Search</string>
    <string name="upload_page_title">Upload</string>
    <string name="signup_page_title">Sign up</string>
    <string name="auto_login_page_title">Auto Login…</string>
    <string name="upload_comment_page">Upload comment…</string>
</resources>
