<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MainActivity"
    tools:showIn="@layout/activity_main">
    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:id="@+id/relativeLayout">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true">


            <EditText
                android:id="@+id/id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id_hint"
                android:textStyle="bold"
                android:singleLine="true"
                android:maxEms="80"
                android:textSize="@dimen/input_text_size"
                android:imeOptions="actionDone"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_edittext_focus"
                android:layout_above="@+id/pw"/>

            <EditText
                android:id="@+id/pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pw_hint"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:textSize="@dimen/input_text_size"
                android:maxEms="80"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_edittext_focus"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="100"
                android:id="@+id/extra"
                android:layout_marginTop="-10dp"
                android:orientation="horizontal"
                android:layout_below="@+id/pw"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_weight="40"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_login"
                    android:id="@+id/auto_login" />

                <View
                    android:layout_width="0dp"
                    android:layout_weight="30"
                    android:layout_height="0dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="30"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="13dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:id="@+id/sign_up" />


            </LinearLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_button"
                android:textStyle="bold"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="20dp"
                android:layout_below="@+id/extra"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
